gitops/platform/garage/exposure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-images
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - images.okbear.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: garage-web-proxy
          port: 8080
          weight: 1
